@@ -1,3 +1,7 @@
+2011-03-21  Emanuel Schuetze <emanuel@intevation.de>
+
+	* website/versions.m4: Updated links.
+
 2011-03-18  Emanuel Schuetze <emanuel@intevation.de>
 
 	* website/gpg4win.css: Fix typo and layout issues.
